--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -101,17 +101,19 @@
 .movie-card .rating {
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 0;
   padding: 5px 10px;
 }
 .movie-card__img {
   width: 100%;
   max-width: 100%;
   height: 300px;
-  border-radius: 10px;
+  border-radius: 5px;
   -o-object-fit: cover;
      object-fit: cover;
   transition: 200ms;
+  border: 1px solid rgba(20, 20, 20, 0.498);
+  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.388);
 }
 .movie-card__title {
   font-size: 1.2rem;
@@ -122,8 +124,33 @@
   word-break: keep-all;
   text-wrap: nowrap;
 }
-.movie-card:hover .movie-card__img {
-  transform: scale(1.05);
+.movie-card__overlay {
+  background: linear-gradient(to bottom, rgba(118, 30, 30, 0), rgba(118, 30, 30, 0.518) 50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: 300ms all ease-in-out;
+}
+.movie-card__play-btn {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: rgba(25, 25, 25, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.movie-card__play-btn i {
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+}
+.movie-card:hover .movie-card__overlay {
+  opacity: 1;
 }
 
 .video-wrapper {
