--- a/assets/styles/scss/_lg.scss
+++ b/assets/styles/scss/_lg.scss
@@ -28,7 +28,7 @@
 }
 
 .movie-card {
-    width: 100%;
+    width: 100% !important;
     position: relative;
 
     .rating {
@@ -60,7 +60,8 @@
     }
 
     &__overlay {
-        background: linear-gradient(to bottom,rgba(118, 30, 30, 0),rgba(118, 30, 30, 0.518) 50%);   
+        // background: linear-gradient(to bottom,rgba(118, 30, 30, 0),rgba(118, 30, 30, 0.518) 50%);   
+        background: linear-gradient(to bottom,rgba(212, 179, 30, 0),rgba(212, 179, 30, 0.583) 50%);   
         top: 0;
         left: 0;
         width: 100%;
@@ -108,5 +109,15 @@
         object-fit: cover;
         object-position: top;
         border-radius: 50%;
+    }
+}
+
+.hor-scroll-list{
+    display: flex;
+    width: 100%;
+    overflow-x: auto;
+    gap: 10px;
+    .movie-card{
+        width: 200px !important;
     }
 }
