--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -2,8 +2,25 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.32), rgb(0, 0, 0));
+  background-image: linear-gradient(to bottom, rgba(106, 106, 106, 0.32) 0%, rgb(0, 0, 0) 100%);
   z-index: 2;
+}
+
+.play-video-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to bottom, rgba(106, 106, 106, 0.32) 0%, rgba(0, 0, 0, 0.552) 100%);
+  z-index: 2;
+  cursor: pointer;
+}
+.play-video-overlay button {
+  font-size: 5rem !important;
+  transition: 300ms !important;
+  outline: none !important;
+}
+.play-video-overlay:hover button {
+  scale: 1.3;
 }
 
 .genre-nav {
@@ -178,6 +195,23 @@
 }
 .hor-scroll-list .movie-card {
   width: 200px !important;
+}
+
+.episode-btn {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
+
+.season-btn {
+  min-width: 120px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 768px) {
