--- a/assets/styles/scss/_components.scss
+++ b/assets/styles/scss/_components.scss
@@ -2,8 +2,28 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.32), rgba(0, 0, 0, 1));
+    background-image: linear-gradient(to bottom, rgba(106, 106, 106, 0.32) 0%, rgb(0, 0, 0) 100%);
     z-index: 2;
+}
+.play-video-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, rgba(106, 106, 106, 0.32) 0%, rgba(0, 0, 0, 0.552) 100%);
+    z-index: 2;
+    cursor: pointer;
+
+    button {
+        font-size: 5rem !important;
+        transition: 300ms !important;
+        outline: none !important;
+    }
+
+    &:hover {
+        button {
+            scale: 1.3;
+        }
+    }
 }
 
 .genre-nav {
